# UrdfViwer

./: CMakeLists.txt  README.md  package.xml
urdfModel/launch/: display.launch.py  robot.rviz
urdfModel/urdf/: inspire_hands.urdf
urdf_model/: CMakeLists.txt  inspire_hands.urdf  package.xml
